--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<script src='chart.js/dist/Chart.js'></script>
 		<script src='angular-chart.js/dist/angular-chart.min.js'></script>
 		<script src='app.js'></script>
+		<script src='routes.js'></script>
 		<script src='navbar/navBar.js'></script>
 		<script src='home/HomeCtrl.js'></script>
 		<script src='history/HistoryCtrl.js'></script>
